<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY nbsp "&#160;"> ]>
<resources>
    <string name="app_name">CULL</string>

    <!--    GENERAL-->
    <string name="generic_error">Serverul nu este momentan disponibil</string>
    <string name="network_error">Conexiunea la server nu a reușit</string>
    <string name="btn_ok">OK</string>
    <string name="btn_continue">Continuă</string>

    <!--    TUTORIAL-->
    <string name="tutorial_title_1">Bine ai venit!</string>
    <string name="tutorial_title_2">Cum funcționează?</string>
    <string name="tutorial_title_3">Ești gata?</string>
    <string name="tutorial_text_1">Cull este aplicația ta de design interior</string>
    <string name="tutorial_text_2">Completează testul de stil și definește spațiul pe care vrei să-l amenajezi, iar noi îți vom genera moodboard-ul.</string>
    <string name="tutorial_text_3">Hai să începem!</string>

    <string name="btn_skip">Skip</string>
    <string name="btn_start">Start</string>

    <!-- QUIZ -->
    <string name="btn_discover_your_style">Descoperă-ți stilul</string>
    <string name="quiz_start_title">Care este stilul tău?</string>
    <string name="quiz_start_text">Alege imaginile preferate și află\ncare este stilul care te definește!</string>
    <string name="quiz_step_format">Pasul %1$d</string>

    <string name="btn_redo_test">Reluare test</string>


    <!-- SELECT SPACE-->
    <string name="space_title">Ce cameră îți dorești să\namenajezi</string>
    <string name="space_room_type_living">Living</string>
    <string name="space_room_type_dining">Dining</string>
    <string name="space_room_type_lobby">Hol</string>
    <string name="space_room_type_office">Birou</string>
    <string name="space_room_type_bedroom">Dormitor</string>
    <string name="space_room_type_child_room">Cameră copii</string>
    <string name="space_area">Suprafață</string>
    <string name="space_edit_suffix_cm">m&#x00B2;</string>
    <string name="space_edit_error_not_zero">Valoare incorectă</string>

    <!-- PRODUCTS -->
    <string name="search_hint">Caută un produs…</string>
    <string name="generating_moodboard">Generare moodboard…</string>
    <string name="add_to_cart">Adaugă în listă</string>
    <string name="remove_from_cart">Scoate din listă</string>
    <string name="products_details_title">DETALIU PRODUS</string>
    <string name="products_list_empty">Nu am găsit niciun produs pentru "%1$s"</string>
    <string name="products_list_empty_filtered">Nu am găsit niciun produs pentru filtrele aplicate. Încercați modificarea filtrelor.</string>
    <string name="total">Total</string>

    <!-- MENU -->
    <string name="menu_account">Contul meu</string>
    <string name="menu_orders">Istoric comenzi</string>
    <string name="menu_terms">Termeni și condiții</string>
    <string name="menu_privacy">Politica de confidențialitate</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_login">Log in</string>
    <string name="menu_redo_test">Reluare test stil</string>
    <string name="menu_change_room">Schimbare cameră</string>
    <string name="menu_contact_designer">Contactează designer</string>
    <string name="menu_saved_list">Liste salvate</string>

    <!-- AUTH -->
    <string name="auth_register_title">Detalii utilizator</string>
    <string name="auth_register_subtitle">Te rugăm să completezi câmpurile de mai jos</string>

    <string name="auth_field_last_name">Nume</string>
    <string name="auth_field_first_name">Prenume</string>
    <string name="auth_field_email">Email</string>
    <string name="auth_field_password">Parola</string>
    <string name="auth_agree_terms">Sunt de acord cu termenii și condițiile</string>

    <string name="auth_login_title">Bine ai revenit</string>
    <string name="auth_login_subtitle">Te rugăm să introduci email și parola</string>
    <string name="auth_forgot_password">Am uitat parola</string>
    <string name="auth_register_button">Nu ai un cont ? <font fgcolor="#FFb59a56">Înregistreză-te</font></string>
    <string name="auth_btn_authenticate">Autentificare</string>
    <string name="auth_register_screen_title">Înregistrare cont</string>
    <string name="auth_login_screen_title">Autentificare</string>

    <string name="auth_activate_open_email">Deschide email</string>
    <string name="auth_activate_success">Cont creat cu succes!</string>
    <string name="auth_activate_message">Te rugăm verifică casuța de email pentru confirmarea acestuia.</string>

    <string name="auth_forgot_pass_title">Ai uitat parola?</string>
    <string name="auth_forgot_pass_message_email">Te rugăm să introduci email-ul pentru a primi link-ul de resetare</string>
    <string name="auth_forgot_pass_message_pass">Te rugăm sa introduci noua parolă</string>
    <string name="auth_forgot_pass_send_email">Trimite email</string>
    <string name="auth_forgot_pass_reset_pass">Resetare parolă</string>
    <string name="auth_forgot_pass_in_progress">Parola în proces de resetare</string>
    <string name="auth_forgot_pass_check_email">Te rugăm verifică casuța de email pentru link-ul de resetare</string>
    <string name="auth_reset_pass_missing_fields">Completează ambele câmpuri</string>
    <string name="auth_reset_pass_no_match">Introdu aceeași parolă de doua ori</string>

    <!-- CART -->
    <string name="cart_continue">Cere ofertă</string>
    <string name="cart_quantity">Cantitate:&nbsp;</string>
    <plurals name="cart_count_format">
        <item quantity="one">%1$d produs</item>
        <item quantity="other">%1$d produse</item>
    </plurals>
    <string name="offer_sent">Cererea a fost trimisă cu succes. Vei fi contactat pe email.</string>
    <string name="offer_failed">Cererea nu a putut fi trimisă. Încearcă mai târziu.</string>
    <string name="offer_sent_short">Cerere trimisă</string>

    

    <!-- ALERTS -->
    <string name="alert_confirmation_title">Ești sigur?</string>
    <string name="alert_confirmation_delete_cart">Lista va fi ștearsă definitiv</string>
    <string name="alert_yes">Da</string>
    <string name="alert_no">Nu</string>
    <string name="alert_ok">OK</string>

    <!--    DESIGNERS-->
    <string name="designers_title">LISTĂ DESIGNERI</string>
    <string name="designers_cta">Trimite cerere</string>
    <string name="designers_too_many">Puteți contacta maximum %1$d designeri.</string>


    <!-- FILTERS  -->
    <string name="filters_title">FILTRE</string>
    <string name="filter_categories">Categorii</string>
    <string name="filter_colors">Culori</string>
    <string name="filter_materials">Material</string>
    <string name="filter_price">Gama de prețuri</string>
    <string name="filter_btn_apply">Aplică</string>
    <string name="filter_price_range_format">%1$d RON - %2$d RON</string>


</resources>