<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">


    <include
        android:id="@+id/navBar"
        layout="@layout/nav_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_auth"
        app:layout_constraintBottom_toTopOf="@id/titleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_screen_margin"
        android:layout_marginEnd="@dimen/auth_screen_margin"
        android:layout_marginBottom="@dimen/auth_text_spacing"
        android:fontFamily="@font/kievitcomppro"
        android:text="@string/auth_register_title"
        android:textSize="@dimen/auth_title_font"
        app:layout_constraintBottom_toTopOf="@id/subTitleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_screen_margin"
        android:layout_marginEnd="@dimen/auth_screen_margin"
        android:layout_marginBottom="@dimen/auth_field_spacing"
        android:fontFamily="@font/kievitcomppro"
        android:text="@string/auth_register_subtitle"
        android:textSize="@dimen/auth_subtitle_font"
        app:layout_constraintBottom_toTopOf="@id/lastNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameInput"
        style="@style/AuthInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/firstNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText style="@style/AuthEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lastNameTitle"
        style="@style/AuthEditTitle"
        android:text="@string/auth_field_last_name"
        app:layout_constraintStart_toStartOf="@id/lastNameInput"
        app:layout_constraintTop_toTopOf="@id/lastNameInput" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameInput"
        style="@style/AuthInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText style="@style/AuthEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/firstNameTitle"
        style="@style/AuthEditTitle"
        android:text="@string/auth_field_first_name"
        app:layout_constraintStart_toStartOf="@id/firstNameInput"
        app:layout_constraintTop_toTopOf="@id/firstNameInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        style="@style/AuthInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText style="@style/AuthEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTitle"
        style="@style/AuthEditTitle"
        android:text="@string/auth_field_email"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toTopOf="@id/emailInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        style="@style/AuthInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password2Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText style="@style/AuthEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTitle"
        style="@style/AuthEditTitle"
        android:text="@string/auth_field_password"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
        app:layout_constraintTop_toTopOf="@id/passwordInput" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2Input"
        style="@style/AuthInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/termsCheckbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText style="@style/AuthEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password2Title"
        style="@style/AuthEditTitle"
        android:text="@string/auth_field_password"
        app:layout_constraintStart_toStartOf="@id/password2Input"
        app:layout_constraintTop_toTopOf="@id/password2Input" />

    <CheckedTextView
        android:id="@+id/termsCheckbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_screen_margin"
        android:layout_marginEnd="@dimen/auth_screen_margin"
        android:layout_marginBottom="@dimen/auth_field_spacing"
        android:drawableStart="@drawable/checkbox_selector"
        android:drawablePadding="@dimen/auth_terms_padding"
        android:fontFamily="@font/kievitcomppro"
        android:gravity="center_vertical|left"
        android:text="@string/auth_agree_terms"
        android:textSize="@dimen/auth_terms_font"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnContinue"
        style="@style/ButtonRounded"
        android:layout_marginBottom="@dimen/auth_screen_margin"
        android:text="@string/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>