<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">


    <include
        android:id="@+id/navBar"
        layout="@layout/nav_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_logo_spacing"
        android:src="@drawable/logo_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_screen_margin"
        android:layout_marginTop="@dimen/auth_logo_spacing"
        android:layout_marginEnd="@dimen/auth_screen_margin"
        android:layout_marginBottom="@dimen/auth_text_spacing"
        android:fontFamily="@font/kievitcomppro"
        android:text="@string/auth_forgot_pass_title"
        android:textSize="@dimen/auth_title_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/subTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_screen_margin"
        android:layout_marginTop="@dimen/auth_text_spacing"
        android:layout_marginEnd="@dimen/auth_screen_margin"
        android:fontFamily="@font/kievitcomppro"
        android:text="@string/auth_forgot_pass_message_email"
        android:textSize="@dimen/auth_subtitle_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        style="@style/AuthInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitleView">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AuthEditText"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTitle"
        style="@style/AuthEditTitle"
        android:text="@string/auth_field_email"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toTopOf="@id/emailInput" />


    <TextView
        android:id="@+id/btnContinue"
        style="@style/ButtonRounded"
        android:layout_marginBottom="@dimen/auth_screen_margin"
        android:text="@string/auth_forgot_pass_send_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>