<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/quiz_image_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/quiz_start_image"
        app:layout_constraintBottom_toTopOf="@id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/quiz_bottom_background"
        android:paddingTop="@dimen/standard_btn_margin"
        android:paddingBottom="@dimen/standard_btn_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/titleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tutorial_text_margin_h"
            android:layout_marginEnd="@dimen/tutorial_text_margin_h"
            android:layout_marginBottom="@dimen/tutorial_text_spacing"
            android:gravity="center"
            android:text="@string/quiz_start_title"
            android:textAppearance="@style/TitleTextAppearance"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tutorial_text_margin_h"
            android:layout_marginEnd="@dimen/tutorial_text_margin_h"
            android:layout_marginBottom="@dimen/standard_btn_margin"
            android:gravity="center_horizontal|top"
            android:text="@string/quiz_start_text"
            android:textAppearance="@style/DefaultTextAppearance"
            app:layout_constraintBottom_toTopOf="@id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/btnStart"
            style="@style/ButtonRounded"
            android:layout_width="0dp"
            android:text="@string/btn_discover_your_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>